# DJFT11

./: README.md  pyproject.toml
app/app/: settings.py  urls.py
app/formapp/: forms.py  models.py  urls.py  views.py
app/formapp/migrations/: 0001_initial.py
app/formapp/templates/formapp/: index.html
